--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "server",
+  "name": "MediGood-BE",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "prestart": "npm i",
     "start": "nodemon index.js"
   },
   "keywords": [],
